tests/paczka1/fuzzy1/10636280.err
Error in line 10: e60uM A20 1,j
Error in line 2: 6ds A151 97,6
Error in line 13: 6ds A722 43,5
Error in line 7: A20 A20 88,7
Error in line 3: e60uM A20 9,9
Error in line 29: I2uZG3R A722 41,29
Error in line 16: s6Pg6 A722 63,7
